--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,11 @@
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
+    <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/lighthouse"
@@ -31,10 +36,13 @@
         </receiver>
 
         <service android:name=".SchedulingService" />
+
         <activity
             android:name=".LoginActivity"
             android:label="@string/title_activity_login" />
-
+        <activity
+            android:name=".SettingsLoginActivity"
+            android:label="@string/title_activity_settings_login"></activity>
     </application>
 
 </manifest>
